advanced/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-ingress
spec:
  rules:
    - host: dummy
      http:
        paths:
          - backend:
              serviceName: foo
              servicePort: 8080
            path: /login
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
spec:
  rules:
    - host: dummy
      http:
        paths:
          - backend:
              serviceName: bar
              servicePort: 8080
            path: /
